--- a/assignment/charts/templates/service.yaml
+++ b/assignment/charts/templates/service.yaml
@@ -4,8 +4,10 @@ metadata:
   name: {{ .Chart.Name }}
 spec:
   type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
   selector:
     app: {{ .Chart.Name }}
+  ports:
+    - name: http
+      protocol: TCP
+      port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
