--- a/assignment/charts/Chart.yaml
+++ b/assignment/charts/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: healthletic-backend
-description: Helm chart for Healthletic Flask backend
+description: Helm chart for Healthletic Flask API
 version: 1.0.0
 appVersion: "1.0.0"
